Stop k-12 and specific big idea columns from overlapping on the tree detail page

--- a/app/assets/stylesheets/trees.scss
+++ b/app/assets/stylesheets/trees.scss
@@ -246,9 +246,18 @@
   }
 
   .detail-page {
+    .row {
+      margin-left: 0;
+      margin-right: 0;
+    }
     .grid-2 {
       display: grid;
       grid-template-columns: 50% 50%;
+      .row {
+        margin-right: 0;
+        margin-left: 0;
+        border-right: 1px solid black;
+      }
     }
     .label {
       background-color: #ddd;
@@ -285,6 +294,7 @@
       text-align: left;
       border-left: 1px solid black;
       border-bottom: 1px solid black;
+      border-right: 1px solid black;
     }
     .last-col {
       border-right: 1px solid black;
@@ -292,6 +302,7 @@
     .rel-sector-col, .rel-reason-col, .subject-relations, .rel-sectors {
       border-left: 1px solid black;
       border-bottom: 1px solid black;
+      border-right: 1px solid black;
       a .pull-right i {
         margin-left: 5px;
       }
@@ -313,8 +324,8 @@
     }
     .teacher-grid {
       display: grid;
-      margin-left: -15px;
-      margin-right: -15px;
+      /* margin-left: -15px;
+      margin-right: -15px; */
       border-top: 1px solid black;
       border-right: 1px solid black;
       border-bottom: 1px solid black;
@@ -330,8 +341,8 @@
     .connections-grid {
       display: grid;
       grid-template-columns: 10% 10% 13% 67%;
-      margin-left: -15px;
-      margin-right: -15px;
+      /* margin-left: -15px;
+      margin-right: -15px; */
       border-top: 1px solid black;
       border-right: 1px solid black;
     }
